Update health_check route to return 200 status code and fix 404 page image filename

--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="{{ url_for('static', filename='404-cyber.png') }}">
+        <img src="{{ url_for('static', filename='404.png') }}">
     </div>
 </body>
 </html>
