Update CSS and templates for 404 and health pages

--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <title>Page Not Found</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='404.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/404.css') }}">
 </head>
 <body>
     <div class="container">
-        <img src="{{ url_for('static', filename='404.png') }}">
+            <img src="{{ url_for('static', filename='images/404.png') }}">
+        </div>
     </div>
 </body>
 </html>
