--- a/app/templates/health.html
+++ b/app/templates/health.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <title>health</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='health.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/health.css') }}">
 </head>
 <body>
     <div class="container">
-        <img src="{{ url_for('static', filename='health.png') }}">
-    </div>
+                <img src="{{ url_for('static', filename='images/health.png') }}">
+            </div>
+        </body>
+        </html>
 </body>
 </html>
