--- a/app/static/css/404.css
+++ b/app/static/css/404.css
@@ -1,42 +1,13 @@
 body {
-    text-align: center;
-    padding: 50px;
-    font-family: 'Arial', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #200010;
 }
 
-.container {
-    max-width: 600px;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
-}
-
-h1 {
-    font-size: 48px;
-    color: #333;
-}
-
-h2 {
-    font-size: 24px;
-    color: #666;
-}
-
-p {
-    color: #888;
-}
-
-a {
-    display: inline-block;
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border-radius: 5px;
-    text-decoration: none;
-}
-
-a:hover {
-    background-color: #0056b3;
+img {
+    max-width: 100%;
+    height: auto;
 }
