working through crypto changes

--- a/svc/slanger/static/css/404.css
+++ b/svc/slanger/static/css/404.css
@@ -4,7 +4,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #1e000f;
+  background-color: rgb(32, 0, 16);
 }
 
 img {
